nsis (2.46-1) unstable; urgency=low

  * New upstream release
  * Switch to 3.0 (quilt) source format
  * Use the system provided compression library of zlib

 -- Thomas Gaugler <thomas@dadie.net>  Tue, 15 Dec 2009 22:18:01 +0000

nsis (2.45-1) unstable; urgency=low

  * New upstream release
  * Adopted package from Paul Wise with his permission
  * Allow building with either gcc-mingw32 (>= 4.4.0-3) or mingw32
  * Fixed occurring access violation in Math plugin once the 
    installer window is closed.

 -- Thomas Gaugler <thomas@dadie.net>  Mon, 17 Aug 2009 19:04:01 +0000

nsis (2.44-4) unstable; urgency=low

  * Brown paper bag upload
  * Actually give the option to dh_strip (closes: #519703)

 -- Paul Wise <pabs@debian.org>  Fri, 20 Mar 2009 12:07:00 +0900

nsis (2.44-3) unstable; urgency=low

  * Don't let dh_strip work on (and break) the libpluginapi.a file
    (Closes: #519703).
  * Support new nocheck option in DEB_BUILD_OPTIONS
  * Bump Standards-Version, nsis now complies

 -- Paul Wise <pabs@debian.org>  Mon, 16 Mar 2009 01:26:29 +0900

nsis (2.44-2) unstable; urgency=low

  * Woops, actually upload to unstable
  * Use dh_lintian instead of manually installing overrides
  * Switch to debhelper compat level 7
  * Switch from dh_clean -k to dh_prep

 -- Paul Wise <pabs@debian.org>  Wed, 25 Feb 2009 01:03:19 +0900

nsis (2.44-1) experimental; urgency=low

  * New upstream bugfix release
    - drop merged fix-Library.nsi-test.patch
  * Move to unstable now that lenny is released
  * Add missing System Call.S copyright info

 -- Paul Wise <pabs@debian.org>  Tue, 24 Feb 2009 17:51:13 +0900

nsis (2.43-1) experimental; urgency=low

  * New upstream release (w00t)
    - Finally makes the System plugin fully functional. Thanks a lot to
      Thomas Gaugler for implementing this (Closes: #319999, LP: #157356)
    - Compiles Resource.dll from an icon and a short .rc (Closes: #442192)
    - Building nsis plugins changes with this release, add details to